# Open-MiroEval

./: .env.template  .gitignore  README.md  REFACTOR_PLAN.md  pyproject.toml  run_eval.py  run_eval.sh
data/detail_results/: README.md
data/input_queries/multimodal-attachments/91/: attachment_91_01.txt
data/input_queries/multimodal-attachments/97/: attachment_97_01.doc  attachment_97_02.doc
data/method_multimodal_results/: mirothinker_v17_multimodal.json
data/method_results/: mirothinker_v17_text.json
eval/: config.py
eval/adapters/: factual_eval.py  point_quality.py  process_eval.py
factual_eval/: .env.template  README.md
factual_eval/config/: __init__.py  benchmark_factual-eval_text.yaml
factual_eval/miroflow/benchmark/: factual_eval_task_runner.py  run_factual_eval.py
factual_eval/scripts/: run_factual_eval.sh
factual_eval/utils/: convert_to_factual_eval.py
miroeval/: __init__.py  __main__.py  cli.py  runner.py
miroeval/core/: __init__.py  cache.py  config.py  llm.py  models.py  utils.py
miroeval/factual/: __init__.py  evaluator.py
miroeval/factual/config/: benchmark_factual-eval_multimodal.yaml
miroeval/factual/scripts/: run_factual_eval.sh  run_single_factual_eval_task.py  test_single_multimodal_factual_eval.sh
miroeval/factual/utils/: check_progress_factual_eval.py
miroeval/process/: __init__.py  evaluator.py  prompts.py
miroeval/quality/: __init__.py  evaluator.py  prompts.py
point_quality/: README.md
process_eval/: README.md
scripts/: run_eval.sh
task_generation/: README.md
(+11 files in other folders)
